Routes en un solo archivo, Borrando gridlayout innecesario en productos y Implementando mostrar/ no mostrar password

--- a/src/app.css
+++ b/src/app.css
@@ -9,7 +9,11 @@
 /*fonts*/
 
 * {
-    font-family: 'Roboto', 'Roboto';
+    font-family: 'Roboto-Regular', 'Roboto';
+}
+
+.roboto-bold {
+    font-family: 'Roboto-Bold', 'Roboto Bold';
 }
 
 .ico {
