--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -9,9 +9,14 @@
 
             <GridLayout rows="auto, auto" columns="auto, *">
                 <Label [text]="iconEmail" row="0" col="0" class="ico icon-login"></Label>
-                <TextField row="0" col="1" [isEnabled]="!_usuarioService.processing" hint="Correo Electrónico" keyboardType="email" returnKeyType="next" autocorrect="false" autocapitalizationType="none" [(ngModel)]="email" required></TextField>
+                <TextField class="m-b-10" row="0" col="1" [isEnabled]="!_usuarioService.processing" hint="Correo Electrónico" keyboardType="email" returnKeyType="next" autocorrect="false" autocapitalizationType="none" [(ngModel)]="email" required></TextField>
                 <Label [text]="iconPassword" row="1" col="0" class="ico icon-login"></Label>
-                <TextField row="1" col="1" [isEnabled]="!_usuarioService.processing" hint="Contraseña" secure="true" returnKeyType="done" [(ngModel)]="password" required (returnPress)="ingresar()"></TextField>
+                <GridLayout row="1" col="1" columns="*,auto" class="container-tf">
+                    <TextField col="0" [isEnabled]="!_usuarioService.processing" hint="Contraseña" [secure]="visibility" returnKeyType="done" [(ngModel)]="password" required (returnPress)="ingresar()"></TextField>
+                    <Label *ngIf="!visibility" [text]="iconVisibilityOff" col="1" class="ico icon-visible" (tap)="visibility = true"></Label>
+                    <Label *ngIf="visibility" [text]="iconVisibility" col="1" class="ico icon-visible" (tap)="visibility = false"></Label>
+                </GridLayout>
+
             </GridLayout>
 
             <Button text="Ingresar a tu Cuenta" [isEnabled]="!_usuarioService.processing" class="btn btn-primary btn-active m-t-5" (tap)="ingresar()"></Button>
