--- a/src/app/pages/tabs-nav/tabs-nav.component.html
+++ b/src/app/pages/tabs-nav/tabs-nav.component.html
@@ -4,17 +4,17 @@
 
         <TabStripItem>
             <Label text="Inicio"></Label>
-            <Image src="font://&#xe88a;" class="ico ico-font bounce"></Image>
+            <Image src="font://&#xe88a;" class="ico ico-font"></Image>
         </TabStripItem>
 
         <TabStripItem>
             <Label text="Pedidos"></Label>
-            <Image src="font://&#xe242;" class="ico ico-font bounce"></Image>
+            <Image src="font://&#xe242;" class="ico ico-font"></Image>
         </TabStripItem>
 
         <TabStripItem>
             <Label text="Perfil"></Label>
-            <Image src="font://&#xe853;" class="ico ico-font bounce"></Image>
+            <Image src="font://&#xe853;" class="ico ico-font"></Image>
         </TabStripItem>
 
     </TabStrip>
