--- a/src/app/auth/signup/signup.component.css
+++ b/src/app/auth/signup/signup.component.css
@@ -51,10 +51,24 @@ TextField {
     border-radius: 7;
 }
 
+.container-tf {
+    background-color: #eeeeee;
+    border-radius: 7;
+    height: 40;
+    vertical-align: center;
+}
+
 .icon-signup {
     font-size: 20;
-    vertical-align: center;
-    padding: 5;
+    padding: 15 10 15 0;
     color: #2d3440;
     opacity: 0.8;
+}
+
+.icon-visible {
+    font-size: 20;
+    text-align: center;
+    color: #2d3440;
+    opacity: 0.5;
+    padding: 10 10 10 0;
 }
