--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -38,7 +38,8 @@ Image {
 .btn-sec {
     color: #ef424c;
     margin: 5 0 5 0;
-    font-weight: 500;
+    font-weight: normal;
+    text-transform: none;
 }
 
 TextField {
