--- a/src/app/pages/productos/producto-detalle/producto.component.html
+++ b/src/app/pages/productos/producto-detalle/producto.component.html
@@ -11,7 +11,7 @@
                 <Image class="img-rounded-card" loadMode="async" stretch="aspectFit" [src]="img | imagen:'producto'"></Image>
 
                 <StackLayout class="card-layout-description-p">
-                    <Label class="h3 label-title" [text]="categoria"></Label>
+                    <Label class="h3 label-title roboto-bold" [text]="categoria"></Label>
                     <StackLayout class="hr-light m-b-12"></StackLayout>
                     <Label class="body" textWrap="true" [text]="descripcion"></Label>
                 </StackLayout>
