--- a/src/app/pages/tabs-nav/tabs-nav.component.html
+++ b/src/app/pages/tabs-nav/tabs-nav.component.html
@@ -14,7 +14,7 @@
 
         <TabStripItem>
             <Label text="Perfil"></Label>
-            <Image src="font://&#xe853;" class="ico ico-font"></Image>
+            <Image src="font://&#xe7fd;" class="ico ico-font"></Image>
         </TabStripItem>
 
     </TabStrip>
