--- a/src/app/pages/productos/productos.component.css
+++ b/src/app/pages/productos/productos.component.css
@@ -5,8 +5,8 @@
     }
     
     .card-layout-description {
-        background-color: rgba(45, 52, 64, 0.5);
-        color: white;
+        background-color: rgb(255, 255, 255, 0.7);
+        color: #0e3743;
         vertical-align: bottom;
         padding: 2 10 2 10;
         border-radius: 0 0 7 7;
@@ -24,6 +24,7 @@
     
     .label-description {
         font-size: 14;
+        /* color: #6644cc; */
         /* height: 15 */
     }
     
@@ -81,7 +82,7 @@
     
     .iconos {
         font-size: 16;
-        border-radius: 5;
+        border-radius: 7;
         color: #eae8dc;
     }
     
@@ -89,20 +90,24 @@
         color: #eae8dc;
         border-radius: 100%;
         border-color: transparent;
-        border-width: 1;
-        padding-right: 5;
+        padding: 0;
+        height: 45;
     }
     
     .icono-cart-color {
-        font-size: 24;
+        font-size: 26;
         color: #28bfdb;
         padding-right: -2;
     }
     
     .icono-fb-color {
-        color: #4267B2;
-        font-size: 20;
-        width: 40;
+        font-size: 26;
+        height: 45;
+        width: 45;
+        border-radius: 100%;
+        text-align: center;
+        padding: 0;
+        vertical-align: middle;
     }
     /*1  2
        ⬜  borde-radius: 1 2 3 4
@@ -117,8 +122,7 @@
     }
     
     .footer {
-        margin-bottom: 5;
-        margin-top: 5;
+        margin: 10;
         text-align: center;
         color: #0e3743;
         font-size: 18;
