--- a/src/app/pages/productos/producto-detalle/producto.component.html
+++ b/src/app/pages/productos/producto-detalle/producto.component.html
@@ -1,101 +1,98 @@
-<ns-action-bar title="{{nombre}}" class="action-bar"></ns-action-bar>
+<ScrollView>
 
-<ScrollView class="page">
+    <StackLayout class="visible" *ngIf="!isLoading">
 
-    <GridLayout rows="*,*" class="p-y-5 centrado-vertical visible" *ngIf="!isLoading">
+        <StackLayout class="background-detail" [backgroundImage]="img | imagen:'producto'">
+            <GridLayout rows="auto,auto" columns="auto, *" class="background-label">
+                <Button row="0" col="0" class="ico btn btn-flat btn-active back" text="&#xe5c4;" (tap)="onBack()"></Button>
+                <Label row="0" col="1" [text]="nombre" class="title p-x-10 roboto-bold" textWrap="true"></Label>
+                <Label row="1" col="1" [text]="categoria" class="sub-title p-x-10" textWrap="true"></Label>
+            </GridLayout>
+        </StackLayout>
 
-        <MDCardView row="0" class="card" elevation="2" [nsRouterLink]="['/producto', producto._id]" pageTransition="slide">
 
+        <MDCardView height="100%" width="100%">
             <StackLayout>
 
-                <Image class="img-rounded-card" loadMode="async" stretch="aspectFit" [src]="img | imagen:'producto'"></Image>
-
                 <StackLayout class="card-layout-description-p">
-                    <Label class="h3 label-title roboto-bold" [text]="categoria"></Label>
+                    <Label class="h3 label-title roboto-bold" text="Descripción"></Label>
                     <StackLayout class="hr-light m-b-12"></StackLayout>
                     <Label class="body" textWrap="true" [text]="descripcion"></Label>
                 </StackLayout>
 
+
+                <GridLayout rows="*" columns="*,*">
+
+                    <GridLayout row="0" col="0" rows="*,*, auto" class="p-10">
+
+                        <Label row="0" text="Cotiza el producto" class="font-cot roboto-bold"></Label>
+                        <StackLayout row="1" class="hr-light m-b-10"></StackLayout>
+
+                        <StackLayout row="2" *ngIf="!rotulos && !rotulos3D">
+
+                            <Label text="Cantidad:" textWrap="true"></Label>
+
+                            <GridLayout class="m-y-12 centrado-horizontal" columns="50,40,50">
+                                <Button col="0" [text]="iconMenos" class="btn icon-cantidad ico icon-3x btn-active" (tap)="variarPrecio(-1)"></Button>
+                                <Label col="1" class="input-cantidad p-y-10" [text]="cantidad" textWrap="true"></Label>
+                                <Button col="2" [text]="iconMas" class="btn icon-cantidad ico icon-3x btn-active" (tap)="variarPrecio(+1)"></Button>
+                            </GridLayout>
+
+                        </StackLayout>
+
+                        <StackLayout [formGroup]="cotizar1Form" row="2" *ngIf="rotulos">
+                            <StackLayout class="m-b-10">
+                                <Label text="Altura*" class="m-b-5" [ngClass]="{invalid:cotizar1Form.controls['altura'].errors?.required || cotizar1Form.controls['altura'].errors?.pattern }"></Label>
+                                <TextField hint="Altura(metros)" class="inputVariables" keyboardType="number" returnKeyType="next" formControlName="altura"></TextField>
+                                <Label class="p-l-10 invalid h6" text="Ingrese solo números" *ngIf="cotizar1Form.controls['altura'].errors?.pattern"></Label>
+                            </StackLayout>
+
+                            <StackLayout class="m-b-10">
+                                <Label text="Ancho*" class="m-b-5" [ngClass]="{invalid:cotizar1Form.controls['ancho'].errors?.required || cotizar1Form.controls['ancho'].errors?.pattern }"></Label>
+                                <TextField hint="Ancho(metros)" class="inputVariables" keyboardType="number" returnKeyType="done" formControlName="ancho"></TextField>
+                                <Label class="p-l-10 invalid h6" text="Ingrese solo números" *ngIf="cotizar1Form.controls['ancho'].errors?.pattern"></Label>
+                            </StackLayout>
+
+                            <Button text="Calcular" (tap)="variarPrecioRotulo(cotizar1Form.controls['altura'].value, cotizar1Form.controls['ancho'].value)" [isEnabled]="cotizar1Form.valid" class="btn-primary btn-active"></Button>
+
+                        </StackLayout>
+
+                        <StackLayout [formGroup]="cotizar2Form" row="2" *ngIf="rotulos3D">
+                            <StackLayout class="m-b-10">
+                                <Label class="m-b-5" text="Altura*" [ngClass]="{invalid:cotizar2Form.controls['altura'].errors?.required || cotizar2Form.controls['altura'].errors?.pattern }"></Label>
+                                <TextField hint="Altura(metros)" class="inputVariables" keyboardType="number" returnKeyType="next" formControlName="altura"></TextField>
+                                <Label class="p-l-10 invalid h6" text="Ingrese solo números" *ngIf="cotizar2Form.controls['altura'].errors?.pattern"></Label>
+                            </StackLayout>
+                            <StackLayout class="m-b-10">
+                                <Label class="m-b-5" text="Ancho*" [ngClass]="{invalid:cotizar2Form.controls['ancho'].errors?.required || cotizar2Form.controls['ancho'].errors?.pattern }"></Label>
+                                <TextField hint="Ancho(metros)" class="inputVariables" keyboardType="number" returnKeyType="next" formControlName="ancho"></TextField>
+                                <Label class="p-l-10 invalid h6" text="Ingrese solo números" *ngIf="cotizar2Form.controls['ancho'].errors?.pattern"></Label>
+                            </StackLayout>
+                            <StackLayout class="m-b-10">
+                                <Label class="m-b-5" text="Número de letras*" [ngClass]="{invalid:cotizar2Form.controls['letras'].errors?.required || cotizar2Form.controls['letras'].errors?.pattern }"></Label>
+                                <TextField hint="Letras" class="inputVariables" keyboardType="number" returnKeyType="done" formControlName="letras"></TextField>
+                                <Label class="p-l-10 invalid h6" text="Ingrese solo números" *ngIf="cotizar2Form.controls['letras'].errors?.pattern"></Label>
+                            </StackLayout>
+
+                            <Button text="Calcular" (tap)="variarPrecioRotulo3D(cotizar2Form.controls['altura'].value, cotizar2Form.controls['ancho'].value, cotizar2Form.controls['letras'].value)" [isEnabled]="cotizar2Form.valid" class="btn btn-primary btn-active"></Button>
+
+                        </StackLayout>
+
+                    </GridLayout>
+
+                    <GridLayout row="1" col="1" rows="*,*,*,*,*,*" class="p-10">
+                        <Label row="0" text="Costo" class="font-cot roboto-bold"></Label>
+                        <StackLayout row="1" class="hr-light m-b-10"></StackLayout>
+                        <Label *ngIf="aparecer" row="2" class=" m-y-11 h2 invalid text-center animate-transition-up" textWrap="true" text="${{precioFinal | number:'.2-2'}}"></Label>
+                        <Label row="3" text="Agregar a la lista de pedidos:" class="font-small" textWrap="true"></Label>
+                        <StackLayout row="4" class="hr-light m-b-10"></StackLayout>
+                        <Button row="5" [text]="iconCarrito" class=" m-y-10 btn ico icon-cart-add icon-2x btn-active" width="50" (tap)="agregarPedido()"></Button>
+                    </GridLayout>
+                </GridLayout>
             </StackLayout>
         </MDCardView>
 
-
-        <GridLayout row="1" rows="*" columns="*,*">
-
-            <MDCardView row="0" col="0" elevation="2" class="card-cotizar">
-
-                <GridLayout rows="*,*, auto" class="p-10">
-
-                    <Label row="0" text="Cotiza el producto" class="font-cot"></Label>
-                    <StackLayout row="1" class="hr-light m-b-10"></StackLayout>
-
-                    <StackLayout row="2" *ngIf="!rotulos && !rotulos3D">
-
-                        <Label text="Cantidad:" textWrap="true"></Label>
-
-                        <GridLayout class="m-y-12 centrado-horizontal" columns="50,40,50">
-                            <Button col="0" [text]="iconMenos" class="btn icon-cantidad ico icon-3x btn-active" (tap)="variarPrecio(-1)"></Button>
-                            <Label col="1" class="input-cantidad p-y-10" [text]="cantidad" textWrap="true"></Label>
-                            <Button col="2" [text]="iconMas" class="btn icon-cantidad ico icon-3x btn-active" (tap)="variarPrecio(+1)"></Button>
-                        </GridLayout>
-
-                    </StackLayout>
-
-                    <StackLayout [formGroup]="cotizar1Form" row="2" *ngIf="rotulos">
-                        <StackLayout class="m-b-10">
-                            <Label text="Altura*" class="m-b-5" [ngClass]="{invalid:cotizar1Form.controls['altura'].errors?.required || cotizar1Form.controls['altura'].errors?.pattern }"></Label>
-                            <TextField hint="Altura(metros)" class="inputVariables" keyboardType="number" returnKeyType="next" formControlName="altura"></TextField>
-                            <Label class="p-l-10 invalid h6" text="Ingrese solo números" *ngIf="cotizar1Form.controls['altura'].errors?.pattern"></Label>
-                        </StackLayout>
-
-                        <StackLayout class="m-b-10">
-                            <Label text="Ancho*" class="m-b-5" [ngClass]="{invalid:cotizar1Form.controls['ancho'].errors?.required || cotizar1Form.controls['ancho'].errors?.pattern }"></Label>
-                            <TextField hint="Ancho(metros)" class="inputVariables" keyboardType="number" returnKeyType="done" formControlName="ancho"></TextField>
-                            <Label class="p-l-10 invalid h6" text="Ingrese solo números" *ngIf="cotizar1Form.controls['ancho'].errors?.pattern"></Label>
-                        </StackLayout>
-
-                        <Button text="Calcular" (tap)="variarPrecioRotulo(cotizar1Form.controls['altura'].value, cotizar1Form.controls['ancho'].value)" [isEnabled]="cotizar1Form.valid" class="btn-primary btn-active"></Button>
-
-                    </StackLayout>
-
-                    <StackLayout [formGroup]="cotizar2Form" row="2" *ngIf="rotulos3D">
-                        <StackLayout class="m-b-10">
-                            <Label class="m-b-5" text="Altura*" [ngClass]="{invalid:cotizar2Form.controls['altura'].errors?.required || cotizar2Form.controls['altura'].errors?.pattern }"></Label>
-                            <TextField hint="Altura(metros)" class="inputVariables" keyboardType="number" returnKeyType="next" formControlName="altura"></TextField>
-                            <Label class="p-l-10 invalid h6" text="Ingrese solo números" *ngIf="cotizar2Form.controls['altura'].errors?.pattern"></Label>
-                        </StackLayout>
-                        <StackLayout class="m-b-10">
-                            <Label class="m-b-5" text="Ancho*" [ngClass]="{invalid:cotizar2Form.controls['ancho'].errors?.required || cotizar2Form.controls['ancho'].errors?.pattern }"></Label>
-                            <TextField hint="Ancho(metros)" class="inputVariables" keyboardType="number" returnKeyType="next" formControlName="ancho"></TextField>
-                            <Label class="p-l-10 invalid h6" text="Ingrese solo números" *ngIf="cotizar2Form.controls['ancho'].errors?.pattern"></Label>
-                        </StackLayout>
-                        <StackLayout class="m-b-10">
-                            <Label class="m-b-5" text="Número de letras*" [ngClass]="{invalid:cotizar2Form.controls['letras'].errors?.required || cotizar2Form.controls['letras'].errors?.pattern }"></Label>
-                            <TextField hint="Letras" class="inputVariables" keyboardType="number" returnKeyType="done" formControlName="letras"></TextField>
-                            <Label class="p-l-10 invalid h6" text="Ingrese solo números" *ngIf="cotizar2Form.controls['letras'].errors?.pattern"></Label>
-                        </StackLayout>
-
-                        <Button text="Calcular" (tap)="variarPrecioRotulo3D(cotizar2Form.controls['altura'].value, cotizar2Form.controls['ancho'].value, cotizar2Form.controls['letras'].value)" [isEnabled]="cotizar2Form.valid" class="btn btn-primary btn-active"></Button>
-
-                    </StackLayout>
-
-                </GridLayout>
-            </MDCardView>
-
-            <MDCardView row="1" col="1" class="card-cotizar" elevation="2">
-                <GridLayout rows="*,*,*,*,*,*" class="p-10">
-                    <Label row="0" text="Costo" class="font-cot"></Label>
-                    <StackLayout row="1" class="hr-light m-b-10"></StackLayout>
-                    <Label *ngIf="aparecer" row="2" class=" m-y-11 h2 invalid text-center animate-transition-up" textWrap="true" text="${{precioFinal | number:'.2-2'}}"></Label>
-                    <Label row="3" text="Agregar a la lista de pedidos:" class="font-small" textWrap="true"></Label>
-                    <StackLayout row="4" class="hr-light m-b-10"></StackLayout>
-                    <Button row="5" [text]="iconCarrito" class=" m-y-10 btn ico icon-cart-add icon-2x btn-active" width="50" (tap)="agregarPedido()"></Button>
-                </GridLayout>
-            </MDCardView>
-
-        </GridLayout>
-
-    </GridLayout>
+    </StackLayout>
 
     <ActivityIndicator class="activity-indicator" [busy]="isLoading" [visibility]="isLoading ? 'visible' : 'collapse'" horizontalAlignment="center" verticalAlignment="center"></ActivityIndicator>
 
