--- a/src/app/pages/cotizaciones/cotizaciones.component.html
+++ b/src/app/pages/cotizaciones/cotizaciones.component.html
@@ -18,7 +18,7 @@
 
                 <GridLayout class="card elevation p-2" androidElevation="2" rows="auto" columns="30,*,40" (tap)="obtenerPosicionArreglo(i)" [nsRouterLink]="['/detalles', cotizacion._id]" pageTransition="slide">
 
-                    <Label class="text-index" row="0" col="0" [text]="i+1" textWrap="true"></Label>
+                    <Label class="text-index roboto-bold" row="0" col="0" [text]="i+1" textWrap="true"></Label>
 
                     <GridLayout row="0" col="1" class=" card-layout" rows="auto, *" columns="*,*, *">
 
