--- a/src/app/pages/productos/productos.component.css
+++ b/src/app/pages/productos/productos.component.css
@@ -1,6 +1,6 @@
     .card {
         background-color: #ffffff;
-        margin: 5;
+        margin: 5 3 5 3;
         border-radius: 7;
     }
     
@@ -99,16 +99,6 @@
         color: #28bfdb;
         padding-right: -2;
     }
-    
-    .icono-fb-color {
-        font-size: 26;
-        height: 45;
-        width: 45;
-        border-radius: 100%;
-        text-align: center;
-        padding: 0;
-        vertical-align: middle;
-    }
     /*1  2
        ⬜  borde-radius: 1 2 3 4
       3  4
@@ -202,4 +192,13 @@
         font-weight: bold;
         background-color: #2d3440;
         color: white;
+    }
+    
+    .title {
+        margin-top: 10;
+        font-size: 30;
+    }
+    
+    .full {
+        padding-bottom: 100%;
     }
