--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -30,7 +30,7 @@
         </StackLayout>
     </StackLayout>
     <ContentView height="100%" width="100%">
-        <Mapbox accessToken="{{tokenMapBox}}" latitude="{{lat}}" longitude="{{long}}" zoomLevel="15" (mapReady)="onMapReady($event)">
+        <Mapbox accessToken="{{tokenMapBox}}" latitude="0.354687" longitude="-78.1171072" zoomLevel="15" (mapReady)="onMapReady($event)">
         </Mapbox>
     </ContentView>
 </StackLayout>
